--- a/src/app/units/states/tasks/inbox/inbox.component.scss
+++ b/src/app/units/states/tasks/inbox/inbox.component.scss
@@ -35,3 +35,7 @@
         width: 100%;
     }
 }
+
+.task-comment-panel.inbox-panel {
+    padding: 0px 0px 0px 5px !important;
+}
